--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet />
+<div class="flex justify-center w-full mt-5 gap-x-10">
+    <div>
+        <router-outlet />
+    </div>
+    <div>
+        <shared-side-menu />
+    </div>
+</div>
