--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -1,17 +1,24 @@
-<h2 class="text-xl font-semibold mb-2">Reactivos: Básicos</h2>
+<h2 class="mb-2 text-xl font-semibold">Reactivos: Básicos</h2>
 <hr class="mb-4">
 
 <div class="grid grid-cols-1 gap-4">
 
-    <form autocomplete="off" class="space-y-4">
+    <form
+        autocomplete="off"
+        class="space-y-4"
+        [formGroup]="myForm"
+        (ngSubmit)="onSave()"
+    >
 
         <!-- Campo de producto -->
-        <div class="grid grid-cols-3 items-center gap-4">
-            <label class="text-gray-700 col-span-1">Producto</label>
+        <div class="grid items-center grid-cols-3 gap-4">
+            <label class="col-span-1 text-gray-700">Producto</label>
             <div class="col-span-2">
                 <input type="text"
                     class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
-                    placeholder="Nombre del producto">
+                    placeholder="Nombre del producto"
+                    formControlName="name"
+                >
                 <span class="text-sm text-red-500">
                     <!-- Debe de ser de 3 letras -->
                     error message
@@ -20,12 +27,14 @@
         </div>
 
         <!-- Campo de precio -->
-        <div class="grid grid-cols-3 items-center gap-4">
-            <label class="text-gray-700 col-span-1">Precio</label>
+        <div class="grid items-center grid-cols-3 gap-4">
+            <label class="col-span-1 text-gray-700">Precio</label>
             <div class="col-span-2">
                 <input type="number"
                     class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
-                    placeholder="Precio del producto">
+                    placeholder="Precio del producto"
+                    formControlName="price"
+                >
                 <span class="text-sm text-red-500">
                     El precio debe de ser 0 o mayor
                 </span>
@@ -33,12 +42,14 @@
         </div>
 
         <!-- Campo de existencias -->
-        <div class="grid grid-cols-3 items-center gap-4">
-            <label class="text-gray-700 col-span-1">Existencias</label>
+        <div class="grid items-center grid-cols-3 gap-4">
+            <label class="col-span-1 text-gray-700">Existencias</label>
             <div class="col-span-2">
                 <input type="number"
                     class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
-                    placeholder="Existencias del producto">
+                    placeholder="Existencias del producto"
+                    formControlName="inStorage"
+                >
                 <span class="text-sm text-red-500">
                     Las existencias deben de ser 0 o mayor
                 </span>
@@ -46,7 +57,7 @@
         </div>
 
         <div class="flex justify-end">
-            <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">
+            <button type="submit" class="px-4 py-2 text-white bg-blue-500 rounded-md hover:bg-blue-600">
                 Guardar
             </button>
         </div>
@@ -58,21 +69,21 @@
 <div class="grid grid-cols-1 gap-4 mt-8">
 
     <span class="font-semibold">Valid</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
     <span class="font-semibold">Pristine</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
     <span class="font-semibold">Touched</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
     <span class="font-semibold">Value</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
     <span class="font-semibold">Precio</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
     <span class="font-semibold">Producto</span>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'objeto' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ 'objeto' | json }}</pre>
 
 </div>
