--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -19,9 +19,11 @@
                     placeholder="Nombre del producto"
                     formControlName="name"
                 >
-                <span class="text-sm text-red-500">
+                <span
+                    *ngIf="isValidField('name')"
+                    class="text-sm text-red-500">
                     <!-- Debe de ser de 3 letras -->
-                    error message
+                    {{ getFieldError('name')}}
                 </span>
             </div>
         </div>
@@ -35,7 +37,7 @@
                     placeholder="Precio del producto"
                     formControlName="price"
                 >
-                <span class="text-sm text-red-500">
+                <span *ngIf="isValidField('price')" class="text-sm text-red-500">
                     El precio debe de ser 0 o mayor
                 </span>
             </div>
@@ -50,7 +52,7 @@
                     placeholder="Existencias del producto"
                     formControlName="inStorage"
                 >
-                <span class="text-sm text-red-500">
+                <span *ngIf="isValidField('inStorage')" class="text-sm text-red-500">
                     Las existencias deben de ser 0 o mayor
                 </span>
             </div>
