--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -16,8 +16,10 @@
                 formControlName="name"
                 class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                 placeholder="Nombre de la persona">
-            <span class="text-sm text-red-500">
-                error message
+            <span
+                *ngIf="isValidField('name')"
+                class="text-sm text-red-500">
+                {{ getFieldError('name') }}
             </span>
         </div>
     </div>
@@ -55,7 +57,9 @@
                         Eliminar
                     </button>
                 </div>
-                <span class="text-sm text-red-500">
+                <span
+                    *ngIf="isValidFieldinArray( favoriteGames, i)"
+                    class="text-sm text-red-500">
                     Este campo es requerido
                 </span>
 
