--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -30,10 +30,12 @@
         <div class="col-span-2">
             <div class="flex">
                 <input
-                    
+                    [formControl]="newFavorite"
                     class="flex-grow px-3 py-2 border rounded-l-md focus:outline-none focus:ring focus:ring-blue-500"
                     placeholder="Agregar favorito">
-                <button class="px-4 py-2 text-white bg-blue-500 rounded-r-md hover:bg-blue-600" type="button">
+                <button
+                    (click)="addFavoriteGame()"
+                    class="px-4 py-2 text-white bg-blue-500 rounded-r-md hover:bg-blue-600" type="button">
                     Agregar favorito
                 </button>
             </div>
@@ -80,17 +82,17 @@
 <div class="mt-8 space-y-4">
     <div>
         <span class="font-semibold">Valid</span>
-        <pre class="p-2 bg-gray-100 rounded-md">{{ 'object' | json }}</pre>
+        <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.valid | json }}</pre>
     </div>
 
     <div>
         <span class="font-semibold">Value</span>
-        <pre class="p-2 bg-gray-100 rounded-md">{{ 'object' | json }}</pre>
+        <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.value | json }}</pre>
     </div>
 
     <div>
         <span class="font-semibold">Agregar Juego</span>
-        <pre class="p-2 bg-gray-100 rounded-md">{{ 'object' | json }}</pre>
-        <pre class="p-2 bg-gray-100 rounded-md">{{ 'object' | json }}</pre>
+        <pre class="p-2 bg-gray-100 rounded-md">{{ newFavorite.valid| json }}</pre>
+        <pre class="p-2 bg-gray-100 rounded-md">{{ newFavorite.value| json }}</pre>
     </div>
 </div>
