--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,20 +1,33 @@
-<h2 class="text-xl font-semibold mb-2">Reactivos: Switches</h2>
+<h2 class="mb-2 text-xl font-semibold">Reactivos: Switches</h2>
 <hr class="mb-4">
 
-<form autocomplete="off" class="space-y-4">
+<form
+    [formGroup]="myForm"
+    (ngSubmit)="onSave()"
+    autocomplete="off"
+    class="space-y-4"
+>
 
     <!-- Radio -->
-    <div class="grid grid-cols-3 items-center gap-4">
-        <label class="text-gray-700 col-span-1">Género</label>
+    <div class="grid items-center grid-cols-3 gap-4">
+        <label class="col-span-1 text-gray-700">Género</label>
         <div class="col-span-2 space-y-2">
             <div class="flex items-center">
-                <input class="mr-2 text-blue-500 focus:ring focus:ring-blue-500" type="radio" value="M"
+                <input
+                    formControlName="gender"
+                    class="mr-2 text-blue-500 focus:ring focus:ring-blue-500"
+                    type="radio"
+                    value="M"
                     id="radioMasculino">
                 <label class="text-gray-700" for="radioMasculino">Masculino</label>
             </div>
 
             <div class="flex items-center">
-                <input class="mr-2 text-blue-500 focus:ring focus:ring-blue-500" type="radio" value="F"
+                <input
+                    formControlName="gender"
+                    class="mr-2 text-blue-500 focus:ring focus:ring-blue-500"
+                    type="radio"
+                    value="F"
                     id="radioFemenino">
                 <label class="text-gray-700" for="radioFemenino">Femenino</label>
             </div>
@@ -22,11 +35,14 @@
     </div>
 
     <!-- Switches -->
-    <div class="grid grid-cols-3 items-center gap-4">
-        <label class="text-gray-700 col-span-1">Notificaciones</label>
+    <div class="grid items-center grid-cols-3 gap-4">
+        <label class="col-span-1 text-gray-700">Notificaciones</label>
         <div class="col-span-2">
             <div class="flex items-center">
-                <input class="mr-2 h-6 w-6 rounded focus:ring focus:ring-blue-500" type="checkbox"
+                <input
+                    formControlName="wantNotifications"
+                    class="w-6 h-6 mr-2 rounded focus:ring focus:ring-blue-500"
+                    type="checkbox"
                     id="flexSwitchCheckChecked">
                 <label class="text-gray-700" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
@@ -34,23 +50,29 @@
     </div>
 
     <!-- Términos y condiciones -->
-    <div class="grid grid-cols-3 items-center gap-4">
+    <div class="grid items-center grid-cols-3 gap-4">
         <div class="col-span-1"></div>
         <div class="col-span-2">
             <div class="flex items-center">
-                <input class="mr-2 h-6 w-6 rounded focus:ring focus:ring-blue-500" type="checkbox"
+                <input
+                    formControlName="termsAndConditions"
+                    class="w-6 h-6 mr-2 rounded focus:ring focus:ring-blue-500"
+                    type="checkbox"
                     id="flexCheckDefault">
                 <label class="text-gray-700" for="flexCheckDefault">Términos y condiciones de uso</label>
             </div>
-            <span class="text-sm text-red-500">
-                Debe de aceptar las condiciones de uso
+            <span
+                *ngIf="isValidField('termsAndConditions')"
+                class="text-sm text-red-500"
+            >
+                Debe de aceptar las condiciones de uso.
             </span>
         </div>
     </div>
 
     <!-- Botón submit -->
     <div class="flex justify-end">
-        <button class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600" type="submit">
+        <button class="px-4 py-2 text-white bg-blue-500 rounded-md hover:bg-blue-600" type="submit">
             Guardar
         </button>
     </div>
@@ -58,11 +80,11 @@
 
 <div class="mt-8 space-y-4">
     <h5 class="font-semibold">Valor del formulario</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'object' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.value| json }}</pre>
 
     <h5 class="font-semibold">Persona</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'object' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ person | json }}</pre>
 
     <h5 class="font-semibold">Valid</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'object' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.valid| json }}</pre>
 </div>
