--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,16 +1,23 @@
-<h2 class="text-xl font-semibold mb-2">Validaciones Reactivas</h2>
+<h2 class="mb-2 text-xl font-semibold">Validaciones Reactivas</h2>
 <hr class="mb-4">
 
 <div class="grid grid-cols-1 gap-4">
     <div>
 
-        <form autocomplete="off" class="space-y-4">
+        <form
+            autocomplete="off"
+            class="space-y-4"
+            [formGroup]="myForm"
+            (ngSubmit)="onSubmit()"
+        >
 
             <!-- Nombre -->
-            <div class="grid grid-cols-3 items-center gap-4">
-                <label class="text-gray-700 col-span-1">Nombre</label>
+            <div class="grid items-center grid-cols-3 gap-4">
+                <label class="col-span-1 text-gray-700">Nombre</label>
                 <div class="col-span-2">
-                    <input type="text"
+                    <input
+                        formControlName="name"
+                        type="text"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Nombre del usuario">
                     <span class="text-sm text-red-500">
@@ -20,10 +27,12 @@
             </div>
 
             <!-- Email -->
-            <div class="grid grid-cols-3 items-center gap-4">
-                <label class="text-gray-700 col-span-1">Email</label>
+            <div class="grid items-center grid-cols-3 gap-4">
+                <label class="col-span-1 text-gray-700">Email</label>
                 <div class="col-span-2">
-                    <input type="email"
+                    <input
+                        formControlName="email"
+                        type="email"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Email del usuario">
                     <span class="text-sm text-red-500">
@@ -33,10 +42,12 @@
             </div>
 
             <!-- Username -->
-            <div class="grid grid-cols-3 items-center gap-4">
-                <label class="text-gray-700 col-span-1">Username</label>
+            <div class="grid items-center grid-cols-3 gap-4">
+                <label class="col-span-1 text-gray-700">Username</label>
                 <div class="col-span-2">
-                    <input type="text"
+                    <input
+                        formControlName="username"
+                        type="text"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Nombre código del usuario">
                     <span class="text-sm text-red-500">
@@ -46,10 +57,12 @@
             </div>
 
             <!-- Password -->
-            <div class="grid grid-cols-3 items-center gap-4">
-                <label class="text-gray-700 col-span-1">Password</label>
+            <div class="grid items-center grid-cols-3 gap-4">
+                <label class="col-span-1 text-gray-700">Password</label>
                 <div class="col-span-2">
-                    <input type="password"
+                    <input
+                        formControlName="password"
+                        type="password"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Password de su cuenta">
                     <span class="text-sm text-red-500">
@@ -59,10 +72,12 @@
             </div>
 
             <!-- Confirmar Password -->
-            <div class="grid grid-cols-3 items-center gap-4">
-                <label class="text-gray-700 col-span-1">Confirmar</label>
+            <div class="grid items-center grid-cols-3 gap-4">
+                <label class="col-span-1 text-gray-700">Confirmar</label>
                 <div class="col-span-2">
-                    <input type="password"
+                    <input
+                        formControlName="confirmPassword"
+                        type="password"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Confirmar la contraseña">
                     <span class="text-sm text-red-500">
@@ -73,7 +88,7 @@
 
             <!-- Botón submit -->
             <div class="flex justify-end">
-                <button class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600" type="submit">
+                <button class="px-4 py-2 text-white bg-blue-500 rounded-md hover:bg-blue-600" type="submit">
                     Crear
                 </button>
             </div>
@@ -83,24 +98,24 @@
 </div>
 
 <div class="mt-8 space-y-4">
-    <h2 class="font-semibold">Form Valid:</h2>
-    <h2 class="font-semibold">Form Status:</h2>
-    <h2 class="font-semibold">Form Pending:</h2>
-    <h2 class="font-semibold">Form Errors</h2>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <h2 class="font-semibold">Form Valid: {{ myForm.valid }} </h2>
+    <h2 class="font-semibold">Form Status: {{ myForm.status }} </h2>
+    <h2 class="font-semibold">Form Pending: {{ myForm.pending }} </h2>
+    <h2 class="font-semibold">Form Errors: </h2>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.errors | json }}</pre>
 
     <h5 class="font-semibold">Nombre</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['name'].value| json }}</pre>
 
     <h5 class="font-semibold">Email</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['email'].value | json }}</pre>
 
     <h5 class="font-semibold">Username</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['username'].value | json }}</pre>
 
     <h5 class="font-semibold">Password</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['password'].value | json }}</pre>
 
     <h5 class="font-semibold">Confirmar</h5>
-    <pre class="bg-gray-100 p-2 rounded-md">{{ 'formulario' | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['confirmPassword'].value | json }}</pre>
 </div>
