add: validator function for username field

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -111,7 +111,7 @@
     <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['email'].value | json }}</pre>
 
     <h5 class="font-semibold">Username</h5>
-    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['username'].value | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['username'].errors | json }}</pre>
 
     <h5 class="font-semibold">Password</h5>
     <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['password'].value | json }}</pre>
