add: validators service

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -20,7 +20,9 @@
                         type="text"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Nombre del usuario">
-                    <span class="text-sm text-red-500">
+                    <span
+                        *ngIf="isValidField('name')"
+                        class="text-sm text-red-500">
                         Debe de ser en formato de nombre y apellido
                     </span>
                 </div>
@@ -35,7 +37,9 @@
                         type="email"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Email del usuario">
-                    <span class="text-sm text-red-500">
+                    <span
+                        *ngIf="isValidField('email')"
+                        class="text-sm text-red-500">
                         mensaje de error del email
                     </span>
                 </div>
@@ -50,7 +54,9 @@
                         type="text"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Nombre código del usuario">
-                    <span class="text-sm text-red-500">
+                    <span
+                        *ngIf="isValidField('username')"
+                        class="text-sm text-red-500">
                         El username no puede ser Strider
                     </span>
                 </div>
@@ -65,7 +71,9 @@
                         type="password"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Password de su cuenta">
-                    <span class="text-sm text-red-500">
+                    <span
+                        *ngIf="isValidField('password')"
+                        class="text-sm text-red-500">
                         La contraseña debe de ser mayor de 6 caracteres.
                     </span>
                 </div>
@@ -80,7 +88,9 @@
                         type="password"
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-500"
                         placeholder="Confirmar la contraseña">
-                    <span class="text-sm text-red-500">
+                    <span
+                        *ngIf="isValidField('confirmPassword')"
+                        class="text-sm text-red-500">
                         Las contraseñas deben de ser iguales
                     </span>
                 </div>
