add: two fields equals validation

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -127,5 +127,5 @@
     <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['password'].value | json }}</pre>
 
     <h5 class="font-semibold">Confirmar</h5>
-    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['confirmPassword'].value | json }}</pre>
+    <pre class="p-2 bg-gray-100 rounded-md">{{ myForm.controls['confirmPassword'].errors | json }}</pre>
 </div>
